--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <link rel="shortcut icon" href="Screenshot_2019-03-14%20Font%20Awesome%205%20dog.png">
     <title>Puppy Tailrd</title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Bree+Serif|Play|Roboto+Mono|Ropa+Sans|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="pTailrd2.css">
-    <script async defer src="pTailrd2.css"></script>
+    <script type="text/javascript" async defer src="pTailrd2.js"></script>
 </head>
 <body>
-<h1 class="header">Puppy Tailrd</h1>
-<ul class="nav nav-tabs" id="navbar">
-    <li class="nav-item">
-        <a class="nav-link active" href="#">Active</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-    </li>
-</ul>
 
+<div class="header">
+    <h1 class="c">Puppy Tailrd</h1>
+</div>
+
+<div id="navbar">
+    <a class="active" href="index.html"><i class="fas fa-home"></i> Home</a>
+    <a href="https://www.etsy.com/shop/PuppyTAILrd?ref=search_shop_redirect">
+        <i class="fas fa-store"></i> Shop</a>
+    <a href="about.html"><i class="fas fa-info-circle"></i> About</a>
+    <a href="contact.html"><i class="far fa-address-book"></i>  Contact</a>
+    <a href="ship.html"><i class="fas fa-truck"></i> Shipping Policy</a>
+</div>
+<div id="mySidenav" class="sidenav">
+    <a id="fb" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
+ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
+    <a id="pin" href="https://www.pinterest.com/search/pins/?q=homepage&rs=typed&term_
+meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
+    <a id="tum" href="https://www.tumblr.com/"><i class="fab fa-tumblr-square"></i></a><br>
+    <a id="link" href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+    <!--<a class="icon" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>-->
+    <!--<a class="icon" href="https://www.snapchat.com/"><i class="fab fa-snapchat"></i></a>-->
+    <!--<a class="icon" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
+    <!--<a class="icon" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
+</div>
 <div class="content">
-    <h3>Sticky Navigation Example</h3>
-    <p>The navbar will stick to the top when you reach its scroll position.</p>
-    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+    <h1>Products</h1>
+    <span class="c"> <i class="fas fa-dog"><span class="c">Puppy Tailrd</span></i></span><br>
 </div>
 </body>
 </html>
