--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
 </div>
 <div class="content">
     <h1>Products</h1>
+    <picture id="product"><a href="">Click Picture to View Inventory</a></picture>
     <span class="c"> <i class="fas fa-dog"><span class="c">Puppy Tailrd</span></i></span><br>
 </div>
 </body>
