--- a/contact.html
+++ b/contact.html
@@ -14,38 +14,56 @@
 </head>
 <body>
 
-<div class="header">
-    <h1 class="c">Puppy Tailrd</h1>
+
+
+<div class="row">
+    <!--    Header-->
+    <div class="header">
+        <h1 class="c">Puppy Tailrd</h1>
+    </div>
+
+    <!--    Nav Bar-->
+    <div id="navbar">
+        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="https://www.etsy.com/shop/PuppyTAILrd?ref=search_shop_redirect">
+            <i class="fas fa-store"></i> Shop</a>
+        <a href="about.html"><i class="fas fa-info-circle"></i> About</a>
+        <a class="active" href="contact.html"><i class="far fa-address-book"></i>  Contact</a>
+        <a href="ship.html"><i class="fas fa-truck"></i> Shipping Policy</a>
+    </div>
 </div>
 
-<div id="navbar">
-    <a class="active" href="index.html"><i class="fas fa-home"></i> Home</a>
-    <a href="https://www.etsy.com/shop/PuppyTAILrd?ref=search_shop_redirect">
-        <i class="fas fa-store"></i> Shop</a>
-    <a href="about.html"><i class="fas fa-info-circle"></i> About</a>
-    <a href="contact.html"><i class="far fa-address-book"></i>  Contact</a>
-    <a href="ship.html"><i class="fas fa-truck"></i> Shipping Policy</a>
-</div>
-<div id="mySidenav" class="sidenav">
-    <a id="fb" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
-ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
-    <a id="pin" href="https://www.pinterest.com/search/pins/?q=homepage&rs=typed&term_
-meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
-    <a id="tum" href="https://www.tumblr.com/"><i class="fab fa-tumblr-square"></i></a><br>
-    <a id="link" href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-    <!--<a class="icon" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>-->
-    <!--<a class="icon" href="https://www.snapchat.com/"><i class="fab fa-snapchat"></i></a>-->
-    <!--<a class="icon" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
-    <!--<a class="icon" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
-</div>
-<div class="content">
-    <h1>Contact Us</h1>
-    <p>
-        Thank you for your interest.
-        Please forward all questions and comments to <br><br>
-        <a id="email" href="mailto:puppytailrd@gmail.com">puppytailrd@gmail.com</a>
-    </p>
-    <span class="c"> <i class="fas fa-dog"><span class="c">Puppy Tailrd</span></i></span><br>
+
+<div class="row">
+    <div class="col-2">
+        <!--Side nav     -->
+        <div id="mySidenav" class="sidenav">
+            <a id="fb" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
+        ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
+            <a id="pin" href="https://www.pinterest.com/search/pins/?q=homepage&rs=typed&term_
+        meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
+            <a id="tum" href="https://www.tumblr.com/"><i class="fab fa-tumblr-square"></i></a><br>
+            <a id="link" href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+            <!--<a class="icon" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>-->
+            <!--<a class="icon" href="https://www.snapchat.com/"><i class="fab fa-snapchat"></i></a>-->
+            <!--<a class="icon" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
+            <!--<a class="icon" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
+        </div>
+    </div>
+
+    <div class="col-"10>
+        <!--    Content-->
+            <div class="content">
+                <h1>Contact Us</h1>
+                <p id="c-space">
+                    Thank you for your interest.
+                    Please forward all questions and comments to <br><br>
+                    <a id="email" href="mailto:puppytailrd@gmail.com">puppytailrd@gmail.com</a>
+                </p>
+                <span class="c"> <i class="fas fa-dog"><span class="c" id="b-logo">Puppy Tailrd</span></i></span>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
