--- a/index.html
+++ b/index.html
@@ -1,47 +1,99 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!--    Title icon and title-->
     <link rel="shortcut icon" href="Screenshot_2019-03-14%20Font%20Awesome%205%20dog.png">
     <title>Puppy Tailrd</title>
+
+    <!--    Meta-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--    Bootstrap files-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+    <!--    Fonts and Icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Bree+Serif|Play|Roboto+Mono|Ropa+Sans|Ubuntu" rel="stylesheet">
+
+    <!--    My style sheet and javascript files-->
     <link rel="stylesheet" type="text/css" href="pTailrd2.css">
     <script type="text/javascript" async defer src="pTailrd2.js"></script>
 </head>
 <body>
 
+<div class="row">
+<!--HEADER-->
 <div class="header">
     <h1 class="c">Puppy Tailrd</h1>
 </div>
 
-<div id="navbar">
-    <a class="active" href="index.html"><i class="fas fa-home"></i> Home</a>
-    <a href="https://www.etsy.com/shop/PuppyTAILrd?ref=search_shop_redirect">
-        <i class="fas fa-store"></i> Shop</a>
-    <a href="about.html"><i class="fas fa-info-circle"></i> About</a>
-    <a href="contact.html"><i class="far fa-address-book"></i>  Contact</a>
-    <a href="ship.html"><i class="fas fa-truck"></i> Shipping Policy</a>
+
+<!--NAV BAR-->
+    <div id="navbar">
+        <a class="active" href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="https://www.etsy.com/shop/PuppyTAILrd?ref=search_shop_redirect">
+            <i class="fas fa-store"></i> Shop</a>
+        <a href="about.html"><i class="fas fa-info-circle"></i> About</a>
+        <a href="contact.html"><i class="far fa-address-book"></i>  Contact</a>
+        <a href="ship.html"><i class="fas fa-truck"></i> Shipping Policy</a>
+    </div>
 </div>
-<div id="mySidenav" class="sidenav">
-    <a id="fb" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
-ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
-    <a id="pin" href="https://www.pinterest.com/search/pins/?q=homepage&rs=typed&term_
-meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
-    <a id="tum" href="https://www.tumblr.com/"><i class="fab fa-tumblr-square"></i></a><br>
-    <a id="link" href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-    <!--<a class="icon" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>-->
-    <!--<a class="icon" href="https://www.snapchat.com/"><i class="fab fa-snapchat"></i></a>-->
-    <!--<a class="icon" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
-    <!--<a class="icon" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
-</div>
-<div class="content">
-    <h1>Products</h1>
-    <picture id="product"><a href="">Click Picture to View Inventory</a></picture>
-    <span class="c"> <i class="fas fa-dog"><span class="c">Puppy Tailrd</span></i></span><br>
+
+
+<!--SIDE NAV-->
+<div class="row">
+    <div class="col-2">
+        <div id="mySidenav" class="sidenav">
+            <a id="fleece" href="fleece.html">Fleece</a>
+            <a id="stretch" href="strech.html">Stretch Cotton</a>
+        </div>
+    </div>
+
+
+<!--    Content-->
+    <div class="col-10">
+        <div class="content">
+            <h1>Products</h1>
+            <div class="row">
+                <a href="car-pic.html" ><img src="Cartoon.jpg"></a>
+                <a href="c-camo-pic.html" ><img src="warmy.jpg"></a>
+                <a href="tux-pic.html" ><img src="pt%20tux.jpg"></a>
+                <a href="ny-pic.html" ><img src="new%20yorker%20side.jpg"></a>
+            </div>
+            <div class="row">
+
+            </div>
+            <div class="row">
+                <a href="c-hip-pic.html"><img src="pt%20classic%20hip.jpg"></a>
+                <a href="g-camo-pic.html"><img src="g-camo.jpg"></a>
+                <a href="p-pow-pic.html"><img src="pt%20puppy%20power.jpg"></a>
+                <a href="dew-pic.html"><img src="pt%20dew%20drop.jpg"></a>
+            </div>
+            <div class="row">
+
+            </div>
+
+<!--            Social Links-->
+            <div class="row">
+                <a id="fb" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
+            ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
+                <a id="pin" href="https://www.pinterest.com/search/pins/?q=homepage&rs=typed&term_
+            meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
+                <a id="tum" href="https://www.tumblr.com/"><i class="fab fa-tumblr-square"></i></a>
+                <a id="link" href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                <!--<a class="icon" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>-->
+                <!--<a class="icon" href="https://www.snapchat.com/"><i class="fab fa-snapchat"></i></a>-->
+                <!--<a class="icon" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
+                <!--<a class="icon" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
+            </div>
+
+<!--            Bottom Logo-->
+            <span class="c"> <i class="fas fa-dog"><span class="c" id="b-logo">Puppy Tailrd</span></i></span>
+        </div>
+    </div>
 </div>
 </body>
 </html>
