Close to done. Fleece and stretch to be finished.  Fix carousel size.  Fix side menu.  3/31/19

--- a/c-hip-pic.html
+++ b/c-hip-pic.html
@@ -59,14 +59,14 @@
 
 <!--            Title-->
             <h1>Classic Hip</h1>
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <div id="carouSel" class="carousel slide" data-ride="carousel">
 
 <!--                Carousel Indicators-->
                 <ol class="carousel-slide">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-<!--                    <li data-target="#myCarousel" data-slide-to="2"></li>-->
-<!--                    <li data-target="#myCarousel" data-slide-to="3"></li>-->
+                    <li data-target="#carouSel" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouSel" data-slide-to="1"></li>
+<!--                    <li data-target="#carouSel" data-slide-to="2"></li>-->
+<!--                    <li data-target="#carouSel" data-slide-to="3"></li>-->
                 </ol>
 
 <!--                Picture Containers-->
@@ -84,11 +84,14 @@
                     <span class="glyphicon glyphicon-chevron-left"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="right carousel-contol" href="#carouSel" data-slide="next">
+                <a class="right carousel-conrtol" href="#carouSel" data-slide="next">
                     <span class="glyphicon glyphicon-chevron-right"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
+
+<!--            Link to product on etsy-->
+            <a href="">Place Order</a>
 
 <!--            Social Media Links-->
             <div class="row">
