--- a/tux-pic.html
+++ b/tux-pic.html
@@ -96,6 +96,10 @@
                 </a>
             </div>
 
+            <!--            Link to product on etsy-->
+            <a href="https://www.etsy.com/listing/680207233/doggie-tuxedo?ref=
+            shop_home_active_5">Place Order</a>
+
 <!--            Social Media Links-->
             <div class="row">
                 <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
