--- a/about.html
+++ b/about.html
@@ -48,16 +48,8 @@
     <div class="col-2">
         <!--Side nav     -->
         <div id="mySidenav" class="sidenav">
-            <a id="fb" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
-        ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
-            <a id="pin" href="https://www.pinterest.com/search/pins/?q=homepage&rs=typed&term_
-        meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
-            <a id="tum" href="https://www.tumblr.com/"><i class="fab fa-tumblr-square"></i></a><br>
-            <a id="link" href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-            <!--<a class="icon" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>-->
-            <!--<a class="icon" href="https://www.snapchat.com/"><i class="fab fa-snapchat"></i></a>-->
-            <!--<a class="icon" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
-            <!--<a class="icon" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
+            <a id="fleece" href="fleece.html">Fleece</a>
+            <a id="stretch" href="strech.html">Stretch Cotton</a>
         </div>
     </div>
 
@@ -80,6 +72,18 @@
                 inspired her. In January of 2019 she decided to take first steps toward making
                 her passion into a business, thus <span class="c">Puppy Tailrd</span> is born.
             </p>
+            <div class="row">
+                <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
+        ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
+                <a class="so-lnk" href="https://www.pinterest.com/search/pins/?q=homepage&rs=typed&term_
+        meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
+                <a class="so-lnk" href="https://www.tumblr.com/"><i class="fab fa-tumblr-square"></i></a>
+                <a class="so-lnk" href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                <!--<a class="so-lnk" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>-->
+                <!--<a class="so-lnk" href="https://www.snapchat.com/"><i class="fab fa-snapchat"></i></a>-->
+                <!--<a class="so-lnk" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
+                <!--<a class="so-lnk" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
+            </div>
             <span class="c"> <i class="fas fa-dog"><span class="c" id="b-logo">Puppy Tailrd</span></i></span>
         </div>
     </div>
