--- a/c-camo-pic.html
+++ b/c-camo-pic.html
@@ -59,16 +59,16 @@
 
 <!--            Title-->
             <h1>Classic Camo</h1>
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <div id="carouSel" class="carousel slide" data-ride="carousel">
 
 <!--                Carousel Indicators-->
                 <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                    <li data-target="#myCarousel" data-slide-to="3"></li>
-                    <li data-target="#myCarousel" data-slide-to="4"></li>
-                    <li data-target="#myCarousel" data-slide-to="5"></li>
+                    <li data-target="#carouSel" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouSel" data-slide-to="1"></li>
+                    <li data-target="#carouSel" data-slide-to="2"></li>
+                    <li data-target="#carouSel" data-slide-to="3"></li>
+                    <li data-target="#carouSel" data-slide-to="4"></li>
+                    <li data-target="#carouSel" data-slide-to="5"></li>
                 </ol>
 
 <!--                Picutre Containers-->
@@ -98,11 +98,15 @@
                     <span class="glyphicon glyphicon-chevron-left"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="right carousel-contol" href="#carouSel" data-slide="next">
+                <a class="right carousel-control" href="#carouSel" data-slide="next">
                     <span class="glyphicon glyphicon-chevron-right"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
+
+            <!--            Link to product on etsy-->
+            <a href="https://www.etsy.com/listing/677834050/bright-camo-dog-hoodie?ref=
+            shop_home_active_3">Place Order</a>
 
 <!--            Social Media Links-->
             <div class="row">
