--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!--    Title icon and title-->
     <link rel="shortcut icon" href="Screenshot_2019-03-14%20Font%20Awesome%205%20dog.png">
     <title>Puppy Tailrd</title>
+
+    <!--    Meta-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--    Bootstrap files-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+    <!--    Fonts and Icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Bree+Serif|Play|Roboto+Mono|Ropa+Sans|Ubuntu" rel="stylesheet">
+
+    <!--    My style sheet and javascript files-->
     <link rel="stylesheet" type="text/css" href="pTailrd2.css">
     <script type="text/javascript" async defer src="pTailrd2.js"></script>
 </head>
@@ -38,28 +48,35 @@
     <div class="col-2">
         <!--Side nav     -->
         <div id="mySidenav" class="sidenav">
-            <a id="fb" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
-        ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
-            <a id="pin" href="https://www.pinterest.com/search/pins/?q=homepage&rs=typed&term_
-        meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
-            <a id="tum" href="https://www.tumblr.com/"><i class="fab fa-tumblr-square"></i></a><br>
-            <a id="link" href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-            <!--<a class="icon" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>-->
-            <!--<a class="icon" href="https://www.snapchat.com/"><i class="fab fa-snapchat"></i></a>-->
-            <!--<a class="icon" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
-            <!--<a class="icon" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
+            <a id="fleece" href="fleece.html">Fleece</a>
+            <a id="stretch" href="strech.html">Stretch Cotton</a>
         </div>
     </div>
 
     <div class="col-"10>
         <!--    Content-->
-            <div class="content">
+        <div class="content">
+
+<!--                Title-->
                 <h1>Contact Us</h1>
                 <p id="c-space">
                     Thank you for your interest.
-                    Please forward all questions and comments to <br><br>
+                    Please forward all questions and comments to our email.<br><br>
                     <a id="email" href="mailto:puppytailrd@gmail.com">puppytailrd@gmail.com</a>
+
                 </p>
+                <div class="row">
+                    <a id="fb" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
+        ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
+                    <a id="pin" href="https://www.pinterest.com/search/pins/?q=homepage&rs=typed&term_
+        meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
+                    <a id="tum" href="https://www.tumblr.com/"><i class="fab fa-tumblr-square"></i></a>
+                    <a id="link" href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                    <!--<a class="icon" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>-->
+                    <!--<a class="icon" href="https://www.snapchat.com/"><i class="fab fa-snapchat"></i></a>-->
+                    <!--<a class="icon" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
+                    <!--<a class="icon" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
+                </div>
                 <span class="c"> <i class="fas fa-dog"><span class="c" id="b-logo">Puppy Tailrd</span></i></span>
             </div>
         </div>
