--- a/dew-pic.html
+++ b/dew-pic.html
@@ -84,12 +84,14 @@
                     <span class="glyphicon glyphicon-chevron-left"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="right carousel-contol" href="#carouSel" data-slide="next">
+                <a class="right carousel-control" href="#carouSel" data-slide="next">
                     <span class="glyphicon glyphicon-chevron-right"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
 
+<!--            Link to product on etsy-->
+            <a href="">Place Order</a>
 <!--            Social Media Links-->
             <div class="row">
                 <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
