--- a/ny-pic.html
+++ b/ny-pic.html
@@ -61,13 +61,13 @@
             <h1>New Yorker</h1>
 
 <!--            Carousel Indicators-->
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <div id="carouSel" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                    <li data-target="#myCarousel" data-slide-to="3"></li>
-                    <li data-target="#myCarousel" data-slide-to="4"></li>
+                    <li data-target="#carouSel" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouSel" data-slide-to="1"></li>
+                    <li data-target="#carouSel" data-slide-to="2"></li>
+                    <li data-target="#carouSel" data-slide-to="3"></li>
+                    <li data-target="#carouSel" data-slide-to="4"></li>
                 </ol>
 
 <!--                Picture container-->
@@ -94,12 +94,15 @@
                     <span class="glyphicon glyphicon-chevron-left"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="right carousel-contol" href="#carouSel" data-slide="next">
+                <a class="right carousel-control" href="#carouSel" data-slide="next">
                     <span class="glyphicon glyphicon-chevron-right"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
 
+<!--            Link to product on etsy-->
+            <a href="https://www.etsy.com/listing/692562505/cartoon-sweater-hoodie?ref=
+            shop_home_active_2">Place Order</a>
 <!--            Social Media Links-->
             <div class="row">
                 <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
