--- a/p-pow-pic.html
+++ b/p-pow-pic.html
@@ -87,11 +87,14 @@
                     <span class="glyphicon glyphicon-chevron-left"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="right carousel-contol" href="#carouSel" data-slide="next">
+                <a class="right carousel-control" href="#carouSel" data-slide="next">
                     <span class="glyphicon glyphicon-chevron-right"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
+
+            <!--            Link to product on etsy-->
+            <a href="">Place Order</a>
 
 <!--            Social Media Links-->
             <div class="row">
