--- a/ship.html
+++ b/ship.html
@@ -11,6 +11,7 @@
 
     <!--    Bootstrap files-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     <!--    Fonts and Icons-->
@@ -23,14 +24,15 @@
 </head>
 <body>
 
+
+
 <div class="row">
-    <!--HEADER-->
+    <!--    Header-->
     <div class="header">
         <h1 class="c">Puppy Tailrd</h1>
     </div>
 
-
-    <!--NAV BAR-->
+    <!--    Nav Bar-->
     <div id="navbar">
         <a href="index.html"><i class="fas fa-home"></i> Home</a>
         <a href="https://www.etsy.com/shop/PuppyTAILrd?ref=search_shop_redirect">
@@ -42,31 +44,37 @@
 </div>
 
 
-
 <div class="row">
     <div class="col-2">
-
-        <!--SIDE NAV-->
+        <!--Side nav     -->
         <div id="mySidenav" class="sidenav">
+            <a id="fleece" href="fleece.html">Fleece</a>
+            <a id="stretch" href="strech.html">Stretch Cotton</a>
+        </div>
+    </div>
+
+    <div class="col-"10>
+        <!--    Content-->
+        <div class="content">
+
+            <!--            Title-->
+        <h1>Shipping Policy</h1>
+        <p id="s-space">
+            <span class="c">Puppy Tailrd</span> ships through the post office. Shipping can take between 3-5
+            days from processing.
+        </p>
+        <div class="row">
             <a id="fb" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
-        ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
+            ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
             <a id="pin" href="https://www.pinterest.com/search/pins/?q=homepage&rs=typed&term_
-        meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
-            <a id="tum" href="https://www.tumblr.com/"><i class="fab fa-tumblr-square"></i></a><br>
+            meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
+            <a id="tum" href="https://www.tumblr.com/"><i class="fab fa-tumblr-square"></i></a>
             <a id="link" href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
             <!--<a class="icon" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>-->
             <!--<a class="icon" href="https://www.snapchat.com/"><i class="fab fa-snapchat"></i></a>-->
             <!--<a class="icon" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
             <!--<a class="icon" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
         </div>
-
-        <!--        Content-->
-<div class="content">
-    <h1>Shipping Policy</h1>
-    <p id="s-space">
-        <span class="c">Puppy Tailrd</span> ships through the post office. Shipping can take between 3-5
-        days from processing.
-    </p>
     <span class="c"> <i class="fas fa-dog"><span class="c" id="b-logo">Puppy Tailrd</span></i></span>
 </div>
 </body>
