Close to done.  Fix side menu.  4/2/19

--- a/about.html
+++ b/about.html
@@ -58,19 +58,19 @@
         <div class="content">
             <h1 id="about">About Us</h1>
             <p id="a-space">
-                <span class="c">Puppy Tailrd</span> is the hobby and ingenuity of Connie brought to life.
+                <span class="c">Puppy Tailrd</span> is the hobby and ingenuity of Connie, brought to life.
                 Our founder takes measurements and creates whimsical dog sheaths
                 for whomever so desires them.<br>
                 <br>
                 In 2017 Connie's family adopted two sweet, short haired dogs from the south.
                 These goofballs didn't know what hit them when they moved into their new
-                abode in Minnesota. Connie in her benevolent grace took pity on these
-                adorable hunyuks and made them some hoodies. These dogs love their sweaters so
+                abode in Minnesota. Connie, in her benevolent grace, took pity on these
+                adorable hunyuks and made them some hoodies. These dogs love their warm wear so
                 much that they pout when you take them off.<br>
                 <br>
                 Connie's love for fiber construction and the dogs love for their new clothes
                 inspired her. In January of 2019 she decided to take first steps toward making
-                her passion into a business, thus <span class="c">Puppy Tailrd</span> is born.
+                her passion into a business, thus <span class="c">Puppy Tailrd</span> was born.
             </p>
             <div class="row">
                 <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
