--- a/c-camo-pic.html
+++ b/c-camo-pic.html
@@ -103,6 +103,8 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
+            <a class="pOrder" href="https://www.etsy.com/listing/677834050/bright-camo-dog-
+            hoodie?ref=shop_home_active_3">Place Order</a>
 
             <!--            Link to product on etsy-->
             <a href="https://www.etsy.com/listing/677834050/bright-camo-dog-hoodie?ref=
