--- a/c-hip-pic.html
+++ b/c-hip-pic.html
@@ -91,7 +91,7 @@
             </div>
 
 <!--            Link to product on etsy-->
-            <a href="">Place Order</a>
+            <a class="pOrder" href="">Place Order</a>
 
 <!--            Social Media Links-->
             <div class="row">
