--- a/g-camo-pic.html
+++ b/g-camo-pic.html
@@ -102,7 +102,7 @@
             </div>
 
 <!--                Link to product on etsy-->
-                <a href="https://www.etsy.com/listing/689574113/gray-camo-dog-hoodie?ref=
+                <a class="pOrder" href="https://www.etsy.com/listing/689574113/gray-camo-dog-hoodie?ref=
                 shop_home_active_4">Place Order</a>
 
 <!--                Social Media Links-->
