--- a/ny-pic.html
+++ b/ny-pic.html
@@ -101,7 +101,7 @@
             </div>
 
 <!--            Link to product on etsy-->
-            <a href="https://www.etsy.com/listing/692562505/cartoon-sweater-hoodie?ref=
+            <a class="pOrder" href="https://www.etsy.com/listing/692562505/cartoon-sweater-hoodie?ref=
             shop_home_active_2">Place Order</a>
 <!--            Social Media Links-->
             <div class="row">
