--- a/tux-pic.html
+++ b/tux-pic.html
@@ -85,6 +85,9 @@
                     </div>
                 </div>
 
+                <a class="pOrder" href="https://www.etsy.com/listing/680207233/
+                doggie-tuxedo?ref=shop_home_active_5">Place Order</a>
+
 <!--                Left and right controls-->
                 <a class="left carousel-control" href="#carouSel" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left"></span>
