--- a/car-pic.html
+++ b/car-pic.html
@@ -98,7 +98,7 @@
             </div>
 
 <!--            Link to product on etsy-->
-            <a href="https://www.etsy.com/listing/679091462/woof-puppy-cartoon-hoodie?ref=
+            <a class="pOrder" href="https://www.etsy.com/listing/679091462/woof-puppy-cartoon-hoodie?ref=
             shop_home_active_1">Place Order</a>
 
 <!--            Social Media Links-->
