--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 
 <!--            Social Links-->
             <div class="row">
-                <a id="fb" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
+                <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
             ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
-                <a id="pin" href="https://www.pinterest.com/search/pins/?q=homepage&rs=typed&term_
+                <a class="so-lnk" href="https://www.pinterest.com/search/pins/?q=homepage&rs=typed&term_
             meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
-                <a id="tum" href="https://www.tumblr.com/"><i class="fab fa-tumblr-square"></i></a>
-                <a id="link" href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                <a class="so-lnk" href="https://www.tumblr.com/"><i class="fab fa-tumblr-square"></i></a>
+                <a class="so-lnk" href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
                 <!--<a class="icon" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>-->
                 <!--<a class="icon" href="https://www.snapchat.com/"><i class="fab fa-snapchat"></i></a>-->
                 <!--<a class="icon" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
