--- a/p-pow-pic.html
+++ b/p-pow-pic.html
@@ -94,7 +94,7 @@
             </div>
 
             <!--            Link to product on etsy-->
-            <a href="">Place Order</a>
+            <a class="pOrder" href="">Place Order</a>
 
 <!--            Social Media Links-->
             <div class="row">
