Close to done.  Fix side menu.  4/2/19

--- a/fleece.html
+++ b/fleece.html
@@ -48,8 +48,8 @@
     <div class="col-2">
         <!--Side nav     -->
         <div id="mySidenav" class="sidenav">
-            <a href="fleece.html">Fleece</a>
-            <a href="strech.html">Stretch Cotton</a>
+            <a id="fleece" href="fleece.html">Fleece</a>
+            <a id="stretch" href="strech.html">Stretch Cotton</a>
         </div>
     </div>
 
@@ -57,7 +57,6 @@
         <!--    Content-->
         <div class="content">
             <h1>Fleece</h1>
-
             <div class="row">
                 <a class="gPic" href="car-pic.html" ><img src="Cartoon.jpg"></a>
                 <a class="gPic" href="c-camo-pic.html" ><img src="warmy.jpg"></a>
