Close to done. issue with image carousel  4/8/19

--- a/c-camo-pic.html
+++ b/c-camo-pic.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!--    Title icon and title-->
-    <link rel="shortcut icon" href="Screenshot_2019-03-14%20Font%20Awesome%205%20dog.png">
+    <link rel="shortcut icon" href="assets/Screenshot_2019-03-14%20Font%20Awesome%205%20dog.png">
     <title>Puppy Tailrd</title>
 
     <!--    Meta-->
@@ -19,8 +19,8 @@
     <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Bree+Serif|Play|Roboto+Mono|Ropa+Sans|Ubuntu" rel="stylesheet">
 
     <!--    My style sheet and javascript files-->
-    <link rel="stylesheet" type="text/css" href="pTailrd2.css">
-    <script type="text/javascript" async defer src="pTailrd2.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/pTailrd2.css">
+    <script type="text/javascript" async defer src="assets/pTailrd2.js"></script>
 </head>
 <body>
 
@@ -74,22 +74,22 @@
 <!--                Picutre Containers-->
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="warmy.jpg" class="sel-pic">
+                        <img src="assets/warmy.jpg" class="sel-pic">
                     </div>
                     <div class="item">
-                        <img src="warmy%20cuddles.jpg" class="sel-pic">
+                        <img src="assets/warmy%20cuddles.jpg" class="sel-pic">
                     </div>
                     <div class="item">
-                        <img src="warmy%20top.jpg" class="sel-pic">
+                        <img src="assets/warmy%20top.jpg" class="sel-pic">
                     </div>
                     <div class="item">
-                        <img src="warmy%20bot.jpg" class="sel-pic">
+                        <img src="assets/warmy%20bot.jpg" class="sel-pic">
                     </div>
                     <div class="item">
-                        <img src="warmy%20span.jpg" class="sel-pic">
+                        <img src="assets/warmy%20span.jpg" class="sel-pic">
                     </div>
                     <div class="item">
-                        <img src="example%20template.jpg" class="sel-pic">
+                        <img src="assets/example%20template.jpg" class="sel-pic">
                     </div>
                 </div>
 
@@ -103,11 +103,9 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-            <a class="pOrder" href="https://www.etsy.com/listing/677834050/bright-camo-dog-
-            hoodie?ref=shop_home_active_3">Place Order</a>
 
             <!--            Link to product on etsy-->
-            <a href="https://www.etsy.com/listing/677834050/bright-camo-dog-hoodie?ref=
+            <a class="pOrder" href="https://www.etsy.com/listing/677834050/bright-camo-dog-hoodie?ref=
             shop_home_active_3">Place Order</a>
 
 <!--            Social Media Links-->
