--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!--    Title icon and title-->
-    <link rel="shortcut icon" href="Screenshot_2019-03-14%20Font%20Awesome%205%20dog.png">
+    <link rel="shortcut icon" href="assets/Screenshot_2019-03-14%20Font%20Awesome%205%20dog.png">
     <title>Puppy Tailrd</title>
 
     <!--    Meta-->
@@ -19,8 +19,8 @@
     <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Bree+Serif|Play|Roboto+Mono|Ropa+Sans|Ubuntu" rel="stylesheet">
 
     <!--    My style sheet and javascript files-->
-    <link rel="stylesheet" type="text/css" href="pTailrd2.css">
-    <script type="text/javascript" async defer src="pTailrd2.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/pTailrd2.css">
+    <script type="text/javascript" async defer src="assets/pTailrd2.js"></script>
 </head>
 <body>
 
@@ -58,19 +58,19 @@
         <div class="content">
             <h1>Products</h1>
             <div class="row">
-                <a class="gPic" href="car-pic.html" ><img src="Cartoon.jpg"></a>
-                <a class="gPic" href="c-camo-pic.html" ><img src="warmy.jpg"></a>
-                <a class="gPic" href="tux-pic.html" ><img src="pt%20tux.jpg"></a>
-                <a class="gPic" href="ny-pic.html" ><img src="new%20yorker%20side.jpg"></a>
+                <a class="gPic" href="car-pic.html" ><img src="assets/Cartoon.jpg"></a>
+                <a class="gPic" href="c-camo-pic.html" ><img src="assets/warmy.jpg"></a>
+                <a class="gPic" href="tux-pic.html" ><img src="assets/pt%20tux.jpg"></a>
+                <a class="gPic" href="ny-pic.html" ><img src="assets/new%20yorker%20side.jpg"></a>
             </div>
             <div class="row">
 
             </div>
             <div class="row">
-                <a class="gPic" href="c-hip-pic.html"><img src="pt%20classic%20hip.jpg"></a>
-                <a class="gPic" href="g-camo-pic.html"><img src="g-camo.jpg"></a>
-                <a class="gPic" href="p-pow-pic.html"><img src="pt%20puppy%20power.jpg"></a>
-                <a class="gPic" href="dew-pic.html"><img src="pt%20dew%20drop.jpg"></a>
+                <a class="gPic" href="c-hip-pic.html"><img src="assets/pt%20classic%20hip.jpg"></a>
+                <a class="gPic" href="g-camo-pic.html"><img src="assets/g-camo.jpg"></a>
+                <a class="gPic" href="p-pow-pic.html"><img src="assets/pt%20puppy%20power.jpg"></a>
+                <a class="gPic" href="dew-pic.html"><img src="assets/pt%20dew%20drop.jpg"></a>
             </div>
             <div class="row">
 
