--- a/ny-pic.html
+++ b/ny-pic.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!--    Title icon and title-->
-    <link rel="shortcut icon" href="Screenshot_2019-03-14%20Font%20Awesome%205%20dog.png">
+    <link rel="shortcut icon" href="assets/Screenshot_2019-03-14%20Font%20Awesome%205%20dog.png">
     <title>Puppy Tailrd</title>
 
     <!--    Meta-->
@@ -19,8 +19,8 @@
     <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Bree+Serif|Play|Roboto+Mono|Ropa+Sans|Ubuntu" rel="stylesheet">
 
     <!--    My style sheet and javascript files-->
-    <link rel="stylesheet" type="text/css" href="pTailrd2.css">
-    <script type="text/javascript" async defer src="pTailrd2.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/pTailrd2.css">
+    <script type="text/javascript" async defer src="assets/pTailrd2.js"></script>
 </head>
 <body>
 
@@ -73,19 +73,19 @@
 <!--                Picture container-->
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="new%20yorker%20side.jpg" class="sel-pic">
+                        <img src="assets/new%20yorker%20side.jpg" class="sel-pic">
                     </div>
                     <div class="item">
-                        <img src="new%20yorker%20top.jpg" class="sel-pic">
+                        <img src="assets/new%20yorker%20top.jpg" class="sel-pic">
                     </div>
                     <div class="item">
-                        <img src="new%20yorker%20bottom.jpg" class="sel-pic">
+                        <img src="assets/new%20yorker%20bottom.jpg" class="sel-pic">
                     </div>
                     <div class="item">
-                        <img src="new%20yorker%20strech%20insert.jpg" class="sel-pic">
+                        <img src="assets/new%20yorker%20strech%20insert.jpg" class="sel-pic">
                     </div>
                     <div class="item">
-                        <img src="example%20template.jpg" class="sel-pic">
+                        <img src="assets/example%20template.jpg" class="sel-pic">
                     </div>
                 </div>
 
