--- a/c-camo-pic.html
+++ b/c-camo-pic.html
@@ -57,11 +57,11 @@
         <!--    Content-->
         <div class="content">
 
-<!--            Title-->
+            <!--            Title-->
             <h1>Classic Camo</h1>
             <div id="carouSel" class="carousel slide" data-ride="carousel">
 
-<!--                Carousel Indicators-->
+                <!--                Carousel Indicator-->
                 <ol class="carousel-indicators">
                     <li data-target="#carouSel" data-slide-to="0" class="active"></li>
                     <li data-target="#carouSel" data-slide-to="1"></li>
@@ -71,7 +71,7 @@
                     <li data-target="#carouSel" data-slide-to="5"></li>
                 </ol>
 
-<!--                Picutre Containers-->
+                <!--                Picture Containers-->
                 <div class="carousel-inner">
                     <div class="item active">
                         <img src="assets/warmy.jpg" class="sel-pic">
@@ -105,10 +105,10 @@
             </div>
 
             <!--            Link to product on etsy-->
-            <a class="pOrder" href="https://www.etsy.com/listing/677834050/bright-camo-dog-hoodie?ref=
-            shop_home_active_3">Place Order</a>
+            <a class="pOrder" href="https://www.etsy.com/listing/679091462/woof-puppy-cartoon-hoodie?ref=
+            shop_home_active_1">Place Order</a>
 
-<!--            Social Media Links-->
+            <!--            Social Media Links-->
             <div class="row">
                 <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
         ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
@@ -122,7 +122,7 @@
                 <!--<a class="so-lnk" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
             </div>
 
-<!--            Bottom Logo-->
+            <!--            Bottom Logo-->
             <span class="c"> <i class="fas fa-dog"><span class="c" id="b-logo">Puppy Tailrd</span></i></span>
         </div>
     </div>
