--- a/c-hip-pic.html
+++ b/c-hip-pic.html
@@ -57,19 +57,17 @@
         <!--    Content-->
         <div class="content">
 
-<!--            Title-->
+            <!--            Title-->
             <h1>Classic Hip</h1>
             <div id="carouSel" class="carousel slide" data-ride="carousel">
 
-<!--                Carousel Indicators-->
-                <ol class="carousel-slide">
+                <!--                Carousel Indicator-->
+                <ol class="carousel-indicators">
                     <li data-target="#carouSel" data-slide-to="0" class="active"></li>
                     <li data-target="#carouSel" data-slide-to="1"></li>
-<!--                    <li data-target="#carouSel" data-slide-to="2"></li>-->
-<!--                    <li data-target="#carouSel" data-slide-to="3"></li>-->
                 </ol>
 
-<!--                Picture Containers-->
+                <!--                Picture Containers-->
                 <div class="carousel-inner">
                     <div class="item active">
                         <img src="assets/pt%20classic%20hip.jpg" class="sel-pic">
@@ -84,16 +82,17 @@
                     <span class="glyphicon glyphicon-chevron-left"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="right carousel-conrtol" href="#carouSel" data-slide="next">
+                <a class="right carousel-control" href="#carouSel" data-slide="next">
                     <span class="glyphicon glyphicon-chevron-right"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
 
-<!--            Link to product on etsy-->
-            <a class="pOrder" href="">Place Order</a>
+            <!--            Link to product on etsy-->
+            <a class="pOrder" href="https://www.etsy.com/listing/679091462/woof-puppy-cartoon-hoodie?ref=
+            shop_home_active_1">Place Order</a>
 
-<!--            Social Media Links-->
+            <!--            Social Media Links-->
             <div class="row">
                 <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
         ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
@@ -107,7 +106,7 @@
                 <!--<a class="so-lnk" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
             </div>
 
-<!--            Bottom Logo-->
+            <!--            Bottom Logo-->
             <span class="c"> <i class="fas fa-dog"><span class="c" id="b-logo">Puppy Tailrd</span></i></span>
         </div>
     </div>
