--- a/dew-pic.html
+++ b/dew-pic.html
@@ -57,19 +57,17 @@
         <!--    Content-->
         <div class="content">
 
-<!--            Title-->
+            <!--            Title-->
             <h1>Dew Drop</h1>
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <div id="carouSel" class="carousel slide" data-ride="carousel">
 
-<!--                Carousel Indicators-->
+                <!--                Carousel Indicator-->
                 <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-<!--                    <li data-target="#myCarousel" data-slide-to="2"></li>-->
-<!--                    <li data-target="#myCarousel" data-slide-to="3"></li>-->
+                    <li data-target="#carouSel" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouSel" data-slide-to="1"></li>
                 </ol>
 
-<!--                Picture Containers-->
+                <!--                Picture Containers-->
                 <div class="carousel-inner">
                     <div class="item active">
                         <img src="assets/pt%20dew%20drop.jpg" class="sel-pic">
@@ -90,9 +88,11 @@
                 </a>
             </div>
 
-<!--            Link to product on etsy-->
-            <a class="pOrder" href="">Place Order</a>
-<!--            Social Media Links-->
+            <!--            Link to product on etsy-->
+            <a class="pOrder" href="https://www.etsy.com/listing/679091462/woof-puppy-cartoon-hoodie?ref=
+            shop_home_active_1">Place Order</a>
+
+            <!--            Social Media Links-->
             <div class="row">
                 <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
         ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
@@ -106,7 +106,7 @@
                 <!--<a class="so-lnk" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
             </div>
 
-<!--            Bottom Logo-->
+            <!--            Bottom Logo-->
             <span class="c"> <i class="fas fa-dog"><span class="c" id="b-logo">Puppy Tailrd</span></i></span>
         </div>
     </div>
