--- a/ny-pic.html
+++ b/ny-pic.html
@@ -57,11 +57,11 @@
         <!--    Content-->
         <div class="content">
 
-<!--            Title-->
+            <!--            Title-->
             <h1>New Yorker</h1>
-
-<!--            Carousel Indicators-->
             <div id="carouSel" class="carousel slide" data-ride="carousel">
+
+                <!--                Carousel Indicator-->
                 <ol class="carousel-indicators">
                     <li data-target="#carouSel" data-slide-to="0" class="active"></li>
                     <li data-target="#carouSel" data-slide-to="1"></li>
@@ -70,7 +70,7 @@
                     <li data-target="#carouSel" data-slide-to="4"></li>
                 </ol>
 
-<!--                Picture container-->
+                <!--                Picture Containers-->
                 <div class="carousel-inner">
                     <div class="item active">
                         <img src="assets/new%20yorker%20side.jpg" class="sel-pic">
@@ -100,10 +100,11 @@
                 </a>
             </div>
 
-<!--            Link to product on etsy-->
-            <a class="pOrder" href="https://www.etsy.com/listing/692562505/cartoon-sweater-hoodie?ref=
-            shop_home_active_2">Place Order</a>
-<!--            Social Media Links-->
+            <!--            Link to product on etsy-->
+            <a class="pOrder" href="https://www.etsy.com/listing/679091462/woof-puppy-cartoon-hoodie?ref=
+            shop_home_active_1">Place Order</a>
+
+            <!--            Social Media Links-->
             <div class="row">
                 <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
         ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
@@ -116,7 +117,8 @@
                 <!--<a class="so-lnk" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
                 <!--<a class="so-lnk" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
             </div>
-<!--            Bottom Logo-->
+
+            <!--            Bottom Logo-->
             <span class="c"> <i class="fas fa-dog"><span class="c" id="b-logo">Puppy Tailrd</span></i></span>
         </div>
     </div>
