--- a/ship.html
+++ b/ship.html
@@ -61,7 +61,7 @@
         <h1>Shipping Policy</h1>
         <p id="s-space">
             <span class="c">Puppy Tailrd</span> ships through the post office. Shipping can take between 3-5
-            days from processing.
+            days after processing.
         </p>
         <div class="row">
             <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
