--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <div class="col-"10>
+    <div class="col-10">
         <!--    Content-->
         <div class="content">
             <h1 id="about">About Us</h1>
