--- a/g-camo-pic.html
+++ b/g-camo-pic.html
@@ -57,21 +57,20 @@
         <!--    Content-->
         <div class="content">
 
-<!--            Title-->
-            <h1>Grey Camo</h1>
-            <div class="container">
+            <!--            Title-->
+            <h1>Classic Camo</h1>
+            <div id="carouSel" class="carousel slide" data-ride="carousel">
 
-<!--                Carousel Indicators-->
-                <div id="carouSel" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouSel" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouSel" data-slide-to="1"></li>
-                        <li data-target="#carouSel" data-slide-to="2"></li>
-                        <li data-target="#carouSel" data-slide-to="3"></li>
-                        <li data-target="#carouSel" data-slide-to="4"></li>
-                    </ol>
+                <!--                Carousel Indicator-->
+                <ol class="carousel-indicators">
+                    <li data-target="#carouSel" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouSel" data-slide-to="1"></li>
+                    <li data-target="#carouSel" data-slide-to="2"></li>
+                    <li data-target="#carouSel" data-slide-to="3"></li>
+                    <li data-target="#carouSel" data-slide-to="4"></li>
+                </ol>
 
-<!--                    Picture Containers-->
+                <!--                Picture Containers-->
                 <div class="carousel-inner">
                     <div class="item active">
                         <img src="assets/g-camo.jpg" class="sel-pic">
@@ -90,22 +89,22 @@
                     </div>
                 </div>
 
-                    <!--                Left and Right Controls-->
-                    <a class="left carousel-control" href="#carouSel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#carouSel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                <!--                Left and Right Controls-->
+                <a class="left carousel-control" href="#carouSel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carouSel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
 
-<!--                Link to product on etsy-->
-                <a class="pOrder" href="https://www.etsy.com/listing/689574113/gray-camo-dog-hoodie?ref=
-                shop_home_active_4">Place Order</a>
+            <!--            Link to product on etsy-->
+            <a class="pOrder" href="https://www.etsy.com/listing/679091462/woof-puppy-cartoon-hoodie?ref=
+            shop_home_active_1">Place Order</a>
 
-<!--                Social Media Links-->
+            <!--            Social Media Links-->
             <div class="row">
                 <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
         ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
@@ -118,7 +117,8 @@
                 <!--<a class="so-lnk" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
                 <!--<a class="so-lnk" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
             </div>
-<!--                Bottom Logo-->
+
+            <!--            Bottom Logo-->
             <span class="c"> <i class="fas fa-dog"><span class="c" id="b-logo">Puppy Tailrd</span></i></span>
         </div>
     </div>
