--- a/p-pow-pic.html
+++ b/p-pow-pic.html
@@ -57,32 +57,26 @@
         <!--    Content-->
         <div class="content">
 
-<!--            Title-->
+            <!--            Title-->
             <h1>Puppy Power</h1>
-
-<!--            Carousel Indicators-->
             <div id="carouSel" class="carousel slide" data-ride="carousel">
+
+                <!--                Carousel Indicator-->
                 <ol class="carousel-indicators">
                     <li data-target="#carouSel" data-slide-to="0" class="active"></li>
                     <li data-target="#carouSel" data-slide-to="1"></li>
-<!--                    <li data-target="#carouSel" data-slide-to="2"></li>-->
-<!--                    <li data-target="#carouSel" data-slide-to="3"></li>-->
                 </ol>
 
-<!--                Picture containers-->
+                <!--                Picture Containers-->
                 <div class="carousel-inner">
                     <div class="item active">
                         <img src="assets/pt%20puppy%20power.jpg" class="sel-pic">
                     </div>
                     <div class="item">
                         <img src="assets/example%20template.jpg" class="sel-pic">
-                    </div>
-<!--                    <div class="item">-->
-
-<!--                    </div>-->
                 </div>
 
-<!--                Left and Right Controls-->
+                <!--                Left and Right Controls-->
                 <a class="left carousel-control" href="#carouSel" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                     <span class="sr-only">Previous</span>
@@ -94,9 +88,10 @@
             </div>
 
             <!--            Link to product on etsy-->
-            <a class="pOrder" href="">Place Order</a>
+            <a class="pOrder" href="https://www.etsy.com/listing/679091462/woof-puppy-cartoon-hoodie?ref=
+            shop_home_active_1">Place Order</a>
 
-<!--            Social Media Links-->
+            <!--            Social Media Links-->
             <div class="row">
                 <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
         ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
@@ -110,7 +105,7 @@
                 <!--<a class="so-lnk" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
             </div>
 
-<!--            Bottom Logo-->
+            <!--            Bottom Logo-->
             <span class="c"> <i class="fas fa-dog"><span class="c" id="b-logo">Puppy Tailrd</span></i></span>
         </div>
     </div>
