--- a/tux-pic.html
+++ b/tux-pic.html
@@ -57,11 +57,11 @@
         <!--    Content-->
         <div class="content">
 
-<!--            Page Title-->
-            <h1>Tux</h1>
-
-<!--            Carousel Indicators-->
+            <!--            Title-->
+            <h1>The Tux</h1>
             <div id="carouSel" class="carousel slide" data-ride="carousel">
+
+                <!--                Carousel Indicator-->
                 <ol class="carousel-indicators">
                     <li data-target="#carouSel" data-slide-to="0" class="active"></li>
                     <li data-target="#carouSel" data-slide-to="1"></li>
@@ -69,7 +69,7 @@
                     <li data-target="#carouSel" data-slide-to="3"></li>
                 </ol>
 
-<!--                Carousel Pictures-->
+                <!--                Picture Containers-->
                 <div class="carousel-inner">
                     <div class="item active">
                         <img src="assets/pt%20tux.jpg" class="sel-pic">
@@ -85,7 +85,7 @@
                     </div>
                 </div>
 
-<!--                Left and right controls-->
+                <!--                Left and Right Controls-->
                 <a class="left carousel-control" href="#carouSel" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                     <span class="sr-only">Previous</span>
@@ -97,10 +97,10 @@
             </div>
 
             <!--            Link to product on etsy-->
-            <a class="pOrder" href="https://www.etsy.com/listing/680207233/doggie-tuxedo?ref=
-            shop_home_active_5">Place Order</a>
+            <a class="pOrder" href="https://www.etsy.com/listing/679091462/woof-puppy-cartoon-hoodie?ref=
+            shop_home_active_1">Place Order</a>
 
-<!--            Social Media Links-->
+            <!--            Social Media Links-->
             <div class="row">
                 <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
         ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
@@ -113,7 +113,8 @@
                 <!--<a class="so-lnk" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
                 <!--<a class="so-lnk" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
             </div>
-<!--            Bottom Logo-->
+
+            <!--            Bottom Logo-->
             <span class="c"> <i class="fas fa-dog"><span class="c" id="b-logo">Puppy Tailrd</span></i></span>
         </div>
     </div>
