--- a/ship.html
+++ b/ship.html
@@ -39,7 +39,7 @@
             <i class="fas fa-store"></i> Shop</a>
         <a href="about.html"><i class="fas fa-info-circle"></i> About</a>
         <a href="contact.html"><i class="far fa-address-book"></i>  Contact</a>
-        <a class="active" href="ship.html"><i class="fas fa-truck"></i> Shipping Policy</a>
+        <a href="ship.html"><i class="fas fa-truck"></i> Shipping Policy</a>
     </div>
 </div>
 
